# eco-bot

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
data/includes/: Turtlebot_Kinect.launch.xml  Turtlebot_Kinect_Lidar.launch.xml  move_base.launch.xml  movebase_gmapping.launch.xml
data/includes/urdf/: Turtlebot_Kinect_Lidar.urdf.xacro  kobuki.urdf.xacro
data/param/: move_base_params.yaml
data/world/: CollectorSpace.world
docs/: Doxyfile
docs/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_collector-members.html  class_collector.html  class_grid_square-members.html  class_grid_square.html  class_navigate_robot-members.html  class_navigate_robot.html  class_randomizer-members.html  class_randomizer.html  class_spawn_collect-members.html  class_spawn_collect.html  classastar__plugin_1_1_a_star_planner-members.html  classastar__plugin_1_1_a_star_planner.html  classes.html  collector_8cpp.html  collector_8cpp_source.html  collector_8hpp.html  collector_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  grid_square_8cpp.html  grid_square_8cpp_source.html  grid_square_8hpp.html  grid_square_8hpp_source.html  hierarchy.html  index.html  md_README.html  namespaceastar__plugin.html  namespaces.html  navigate_robot_8cpp.html  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_2.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+8 more)
docs/latex/: annotated.tex  class_collector.tex  class_grid_square.tex  class_navigate_robot.tex  class_randomizer.tex  class_spawn_collect.tex  classastar__plugin_1_1_a_star_planner.eps  classastar__plugin_1_1_a_star_planner.tex  collector_8cpp.tex  collector_8hpp.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  grid_square_8cpp.tex  grid_square_8hpp.tex  hierarchy.tex  md_README.tex  namespaceastar__plugin.tex  namespaces.tex  navigate_robot_8cpp.tex  navigate_robot_8hpp.tex  path_planner_8cpp.tex  path_planner_8hpp.tex  randomizer_8cpp.tex  randomizer_8hpp.tex  refman.tex  spawn_collect_8cpp.tex  spawn_collect_8hpp.tex  src_2main_8cpp.tex  test_2main_8cpp.tex  test_grid_square_8cpp.tex  test_navigate_robot_8cpp.tex  test_path_planner_8cpp.tex  test_randomizer_8cpp.tex  test_spawn_collect_8cpp.tex
docs/man/man3/: Collector.3  GridSquare.3  NavigateRobot.3  README.md.3  Randomizer.3  SpawnCollect.3  _home_prasheel_ObjectCollectorFinal_GitUploadEcoBot_eco-bot_include_.3  _home_prasheel_ObjectCollectorFinal_GitUploadEcoBot_eco-bot_src_.3  _home_prasheel_ObjectCollectorFinal_GitUploadEcoBot_eco-bot_test_.3  astar_plugin.3  astar_plugin_AStarPlanner.3  collector.cpp.3  collector.hpp.3  gridSquare.cpp.3  gridSquare.hpp.3  main.cpp.3  md__r_e_a_d_m_e.3  navigateRobot.cpp.3  navigateRobot.hpp.3  pathPlanner.cpp.3  pathPlanner.hpp.3  randomizer.cpp.3  randomizer.hpp.3  spawnCollect.cpp.3  spawnCollect.hpp.3  testGridSquare.cpp.3  testNavigateRobot.cpp.3  testPathPlanner.cpp.3  testRandomizer.cpp.3  testSpawnCollect.cpp.3
docs/rtf/: dir_13e138d54eb8818da29c3992edef070a.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_d44c64559bbebec7f509842c48db8b23.rtf  refman.rtf
docs/xml/: _r_e_a_d_m_e_8md.xml  class_collector.xml  class_grid_square.xml  class_navigate_robot.xml  class_randomizer.xml  class_spawn_collect.xml  classastar__plugin_1_1_a_star_planner.xml  collector_8cpp.xml  collector_8hpp.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  grid_square_8cpp.xml  grid_square_8hpp.xml  index.xml  md_README.xml  namespaceastar__plugin.xml  navigate_robot_8cpp.xml  navigate_robot_8hpp.xml  path_planner_8cpp.xml  path_planner_8hpp.xml  randomizer_8cpp.xml  randomizer_8hpp.xml  spawn_collect_8cpp.xml  spawn_collect_8hpp.xml  src_2main_8cpp.xml  test_2main_8cpp.xml  test_grid_square_8cpp.xml  test_navigate_robot_8cpp.xml  test_path_planner_8cpp.xml  test_randomizer_8cpp.xml  test_spawn_collect_8cpp.xml
include/: collector.hpp  gridSquare.hpp  navigateRobot.hpp  pathPlanner.hpp  randomizer.hpp  spawnCollect.hpp
launch/: Collecting.launch  Mapping.launch  TurtlebotMapping.launch  testPathPlanner.launch
launch/includes/: Turtlebot_Kinect_Lidar.launch.xml  movebase_gmapping.launch.xml
launch/includes/urdf/: Turtlebot_Kinect_Lidar.urdf.xacro
maps/: CollectorSpace.pgm  CollectorSpace.yaml
results/: cppcheck_output.txt  cpplint_output.txt
src/: collector.cpp  gridSquare.cpp  main.cpp  navigateRobot.cpp  pathPlanner.cpp  randomizer.cpp  spawnCollect.cpp
test/: main.cpp  testGridSquare.cpp  testNavigateRobot.cpp  testNavigator.launch  testPathPlanner.cpp  testRandomizer.cpp  testSpawnCollect.cpp
